--- a/src/app/shared/forms/offer/catalogue/catalogue.component.html
+++ b/src/app/shared/forms/offer/catalogue/catalogue.component.html
@@ -51,7 +51,7 @@
                                 (click)="$event.stopPropagation(); toggleSelection(cat)">
                         </td>
 
-                        <td [ngClass]="{
+                        <td data-cy="offerCatalogName" [ngClass]="{
                             'break-all': hasLongWord(cat.name, 20),
                             'break-words': !hasLongWord(cat.name, 20)
                             }" class="px-6 py-4 text-wrap break-words">
@@ -80,7 +80,7 @@
     @if (!loadingCatalog_more) {
         @if (catalogPageCheck) {
         <div class="flex pt-6 pb-2 justify-center align-middle">
-            <button (click)="nextCatalog()" class="flex cursor-pointer shadow-lg items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 dark:text-white bg-white dark:bg-primary-100 dark:hover:bg-secondary-100 border border-gray-300 dark:border-secondary-200 rounded-lg hover:bg-gray-200">
+            <button data-cy="loadMore" (click)="nextCatalog()" class="flex cursor-pointer shadow-lg items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 dark:text-white bg-white dark:bg-primary-100 dark:hover:bg-secondary-100 border border-gray-300 dark:border-secondary-200 rounded-lg hover:bg-gray-200">
                 {{ 'CREATE_PROD_SPEC._load_more' | translate }}
             <svg class="w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
