--- a/src/app/pages/admin/categories/categories.component.html
+++ b/src/app/pages/admin/categories/categories.component.html
@@ -7,12 +7,12 @@
         </div>
 
         <div class="flex flex-row w-full justify-end">
-            <button type="button" (click)="createCategory()" class="ml-2 mr-8 mb-4 text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center align-middle me-2">
+            <button data-cy="adminAddNewCategory" type="button" (click)="createCategory()" class="ml-2 mr-8 mb-4 text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center align-middle me-2">
                 <p class="pl-2 pr-2 dark:text-white">{{ 'CATEGORIES._add_new_cat' | translate }}</p>
                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                   <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7 7V5"/>
                 </svg>
-            </button>  
+            </button>
         </div>
 
       </div>
@@ -112,10 +112,10 @@
             <tbody>
                 @for (cat of categories; track cat.id;let idx = $index) {
                     <tr class="flex border-b dark:border-gray-700 hover:bg-gray-200 w-full justify-between dark:bg-secondary-300 dark:hover:bg-secondary-200">
-                        <td class="flex px-6 py-4 w-2/4">
+                        <td data-cy="adminTableOfferName" class="flex px-6 py-4 w-2/4">
                             <b>{{cat.name}}</b>
                         </td>
-                        <td class="hidden md:flex px-6 py-4 w-fit">
+                        <td data-cy="adminTableOfferStatus" class="hidden md:flex px-6 py-4 w-fit">
                             @if(cat.lifecycleStatus == 'Active'){
                                 <span class="bg-blue-100 max-h-6 dark:bg-secondary-300 text-blue-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{cat.lifecycleStatus}}</span>
                             } @else if(cat.lifecycleStatus == 'Launched') {
@@ -129,8 +129,8 @@
                         <td class="hidden md:table-cell px-6 py-4 w-fit">
                             {{cat.lastUpdate | date:'EEEE, dd/MM/yy, HH:mm'}} 
                         </td> 
-                        <td class="flex px-6 py-4 w-fit justify-end">                            
-                            <button type="button" (click)="goToUpdate(cat)" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
+                        <td class="flex px-6 py-4 w-fit justify-end">
+                            <button data-cy="adminEditCategory" type="button" (click)="goToUpdate(cat)" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
                                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                                     <path fill-rule="evenodd" d="M14 4.182A4.136 4.136 0 0 1 16.9 3c1.087 0 2.13.425 2.899 1.182A4.01 4.01 0 0 1 21 7.037c0 1.068-.43 2.092-1.194 2.849L18.5 11.214l-5.8-5.71 1.287-1.31.012-.012Zm-2.717 2.763L6.186 12.13l2.175 2.141 5.063-5.218-2.141-2.108Zm-6.25 6.886-1.98 5.849a.992.992 0 0 0 .245 1.026 1.03 1.03 0 0 0 1.043.242L10.282 19l-5.25-5.168Zm6.954 4.01 5.096-5.186-2.218-2.183-5.063 5.218 2.185 2.15Z" clip-rule="evenodd"/>
                                 </svg>
