--- a/src/app/shared/billing-account-form/billing-account-form.component.html
+++ b/src/app/shared/billing-account-form/billing-account-form.component.html
@@ -130,7 +130,7 @@
         <label for="phoneNumber" class="mb-3 block text-sm font-semibold leading-none text-body-dark dark:text-white">{{ 'BILLING._phone' | translate }} (*)</label>
         <div class="w-full">
             <div class="relative flex items-center">
-                <button (click)="prefixCheck=!prefixCheck"
+                <button data-cy="billingPhoneCountry" (click)="prefixCheck=!prefixCheck"
                 class="mb-2 flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 dark:bg-secondary-300 dark:border-secondary-200 dark:text-white rounded-s-lg hover:bg-gray-200 dark:hover:bg-primary-200 focus:ring-4 focus:outline-none focus:ring-gray-100" type="button">
                     {{phonePrefix.flag}} {{phonePrefix.code}}
                     <svg class="w-2.5 h-2.5 ms-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 10 6"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 4 4 4-4"/></svg>
