--- a/src/app/shared/forms/offer/price-plans/price-components-table/price-components-table.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-components-table/price-components-table.component.html
@@ -18,7 +18,7 @@
           <td class="px-6 py-4">{{ getPriceTypeLabel(component.priceType) }}</td>
           <td class="px-6 py-4 text-center flex justify-center gap-3">
             <!-- Botón Editar -->
-            <button (click)="editPriceComponent(component)" class="text-blue-500 hover:text-secondary-400 transition">
+            <button data-cy="ppEditPriceComponent" (click)="editPriceComponent(component)" class="text-blue-500 hover:text-secondary-400 transition">
               <svg class="min-w-4 w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                 <path fill="currentColor"
                       d="M410.3 231l11.3-11.3-33.9-33.9-62.1-62.1L291.7 89.8l-11.3 11.3-22.6 22.6L58.6 322.9c-10.4
@@ -31,7 +31,7 @@
               </svg>
             </button>
             <!-- Botón Eliminar -->
-            <button (click)="confirmDelete(component)" class="text-red-500 hover:text-red-700 transition">
+            <button data-cy="ppDeletePriceComponent" (click)="confirmDelete(component)" class="text-red-500 hover:text-red-700 transition">
               <svg class="min-w-4 w-4 h-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
                 <path fill="currentColor"
                       d="M163.8 0L284.2 0c12.1 0 23.2 6.8 28.6 17.7L320 32l96 0c17.7 0 32 14.3 32 32s-14.3 32-32
